feat: Refactor board

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "trace": "next internal turbo-trace-server .next/trace-turbopack"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -16,7 +17,7 @@
     "@xstate/react": "^5.0.5",
     "clsx": "^2.1.1",
     "lodash-es": "^4.17.21",
-    "next": "15.3.3",
+    "next": "^15.3.3",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
